[tool.poetry]
authors = ["Tammy Cravit <tammymakesthings@gmail.com>"]
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.8',
  'Topic :: Math :: Calculators',
]
description = "Simple RPN Calculator in Python with a Sly lexer"
license = "MIT"
name = "rpn_calc"
version = "0.6.0"

[tool.poetry.dependencies]
fire = "^0.4.0"
python = "^3.8"
pyyaml = "*"
sly = "*"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^21.10b0"
mypy = "^0.910"
nose = "^1.3.7"
ptipython = "^1.0.1"
pycodestyle = "^2.8.0"
pytest = "^6.2.5"
pytest-bdd = "^5.0.0"
pytest-cov = "^3.0.0"
pytest-helper = "^0.2.2"
pytest-mypy = "^0.8.1"
pytest-fixtures = "^0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--cov-config=coverage.rc --cov=rpn_calc --cov-report html --cov-report xml -rA --exitfirst --durations=5  --new-first --doctest-continue-on-failure"
console_output_style = "count"
log_cli = true
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
minversion = "6.0"
testpaths = "tests"
