# SPDX-FileCopyrightText: 2019-2023, Tammy Cravit
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "rpn_calc"
version = "0.6.1"
description = "Simple RPN Calculator in Python with a Sly lexer"
authors = [
    "Tammy Cravit <tammy@tammymakesthings.com>",
]
license = "MIT"
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Topic :: Math :: Calculators',
]

[tool.poetry.dependencies]
python = "^3.8, <4.0"
sly = "*"
fire = "^0.4.0"
pyyaml = "*"
toml = ">= 0.1.2"

[tool.poetry.group.dev.dependencies]
ptipython = "*"
black = "*"
pylint = "*"
ipdbugger = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
nose = "^1.3.7"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
