# SPDX-FileCopyrightText: 2019-2023, Tammy Cravit
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "rpn_calc"
version = "0.6.1"
description = "Simple RPN Calculator in Python with a Sly lexer"
authors = [
    "Tammy Cravit <tammy@tammymakesthings.com>",
]
license = "MIT"
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Topic :: Math :: Calculators',
]

[tool.poetry.dependencies]
python = "^3.8, <4.0"
sly = "*"
fire = "^0.4.0"
pyyaml = "*"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ptipython = "*"
black = "*"
pylint = "*"
ipdbugger = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
nose = "^1.3.7"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest]
minversion = "7.0"
addopts = "--strict-config --strict-markers --failed-first --durations=5 -ra -q --doctest-continue-on-failure -m \"not integration and not slow and not broken\""
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
doctest_encoding = "utf-8"
markers = [
  "slow: marks test as slow (include with '-m slow')",
  "integration: marks test as integration tests (include with '-m integration')",
  "broken: marks test as broken tests (include with '-m broken')",
]

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
